--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: http://localhost:1313
+baseURL: "https://zouzhuozhang.github.io/"
 languageCode: en-us
 title: My New Hugo Site
 theme: ["PaperMod"]
