--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://zouzhuozhang.github.io/"
+baseURL: "https://zouzhuozhang.github.io"
 languageCode: en-us
 title: My New Hugo Site
 theme: ["PaperMod"]
