--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,15 +22,18 @@ languages:
       series: series
     menu:
       main:
+        - name: Posts
+          url: /
+          weight: 1
         - name: Archive
           url: archives
-          weight: 1
+          weight: 5
         - name: Search
           url: search/
-          weight: 2
+          weight: 10
         - name: Tags
           url: tags/
-          weight: 3
+          weight: 15
 
 outputs:
   home:
@@ -122,7 +125,7 @@ params:
     hiddenInSingle: true # hide on single page
 
   editPost:
-    URL: "https://github.com/<path_to_repo>/content"
+    URL: "https://github.com/zouzhuozhang/zouzhuozhang.github.io/tree/master/content"
     Text: "Suggest Changes" # edit text
     appendFilePath: true # to append file path to Edit link
 
